# touch-traversal

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  pages.yml
THIRD_PARTY_LICENSES/: web-runtime-LICENSES.txt
apps/: AGENTS.md
apps/web/: .prettierignore  AGENTS.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/app/: AGENTS.md  (+3 more)
docs/: AGENTS.md  adr-0001-local-personal-ingestion.md  direct-hand-manipulation.md  hand-tracking-worker.md  interaction-controls.md  performance-report.md  personal-graph-json-format.md  personal-graph-studio-release.md  personal-ingestion.md  portfolio-media.md  project-guide.md  visual-language.md
docs/diagrams/: README.md  gesture-input.mmd  pipeline.mmd  system-architecture.mmd
pipeline/: AGENTS.md  README.md  pyproject.toml
pipeline/config/: default.yaml
pipeline/tests/: AGENTS.md  test_chunking.py  test_cli.py  test_config.py  test_embeddings.py  test_exporting.py  test_graph_relations.py  test_ingestion.py  test_layouts.py  test_models.py  test_relations.py  test_repository_foundation.py  test_studio.py
pipeline/tests/fixtures/studio-two-note/: companion.txt  origin.md
pipeline/touch_traversal/: AGENTS.md  __init__.py  __main__.py  artifacts.py  building.py  chunking.py  cli.py  config.py  documents.py  embeddings.py  exporting.py  graph_relations.py  ingestion.py  layouts.py  models.py  relations.py  studio_contract.py  studio_server.py
sample-notes/: AGENTS.md
scripts/: AGENTS.md  measure-performance.mjs  measure-studio-generation.py  measure-studio-intake.mjs  verify-root-tooling.mjs
(+128 files in other folders)
