[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "touch-traversal"
version = "0.1.0"
description = "Build deterministic knowledge graphs from personal notes."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "pydantic==2.13.4",
  "PyYAML==6.0.3",
]

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
  "types-PyYAML==6.0.12.20260518",
]

[project.scripts]
touch-traversal = "touch_traversal.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["touch_traversal"]

[tool.hatch.build.targets.wheel.force-include]
"config/default.yaml" = "touch_traversal/config/default.yaml"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/config",
  "/pyproject.toml",
  "/touch_traversal",
  "/tests",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-ra"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["touch_traversal", "tests"]
show_error_codes = true
pretty = true
